--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sharingan</title>
+    <title>Sharingan!</title>
     <link rel="stylesheet" href="myStyle.css">
 </head>
 
 <body>
     <!-- header -->
     <div class="header">
-        <button id="start" class="startBtnNav">start</button>
-        <button id="restart" class="restartBtnNav hidden">restart</button>
-        <button id="giveUp" class="giveUpBtnNav hidden">give up</button>
-        <h1 class="title">SHARINGAN!</h1>
-        <h3 id="winLose"></h1>
+        <button id="restart" class="restartBtnNav">restart</button>
+        <button id="giveUp" class="giveUpBtnNav">give up</button>
+        <h1 class="title">Sharingan!</h1>
+        <h2 id="winLose"></h2>
+        <img src="./img/eyesGif.gif" alt="eyesGif">
     </div>
     <!-- cards first 5 -->
     <div id="cardsGrid" class="cards">
